--- a/dealroom.html
+++ b/dealroom.html
@@ -18,10 +18,10 @@
   });
 
 // Templates' IDs for the current AI instance
-var templateSpace = "/places/1060"; //actually, a SPACE
+var templateSpace = "/places"; //actually, a SPACE
 var templateSpaceURI = "https://apps-public-cloud-trunk.jivesoftware.com/groups/deal-room-template-group";
-var templateProject = "/places/1029";
-var templateProjectURI = "https://accenture.jiveon.com/community/deal-room-template/projects/rfp-response-template-project";
+var templateProject = "/places";
+var templateProjectURI = "https://apps-public-cloud-trunk.jivesoftware.com/groups/deal-room-template-group/projects/rfp-response-template";
 
 // Flag indicating we are in add mode
 var adding = true;
