--- a/dealroom.html
+++ b/dealroom.html
@@ -18,9 +18,9 @@
   });
 
 // Templates' IDs for the current AI instance
-var templateSpace = "/places"; //actually, a SPACE
+var templateSpace = "/places/"; //actually, a SPACE
 var templateSpaceURI = "https://apps-public-cloud-trunk.jivesoftware.com/groups/deal-room-template-group";
-var templateProject = "/places";
+var templateProject = "/places/";
 var templateProjectURI = "https://apps-public-cloud-trunk.jivesoftware.com/groups/deal-room-template-group/projects/rfp-response-template";
 
 // Flag indicating we are in add mode
@@ -96,10 +96,10 @@ function onDiscFetch(response) {
 	postDisc.content = group.content;
 	postDisc.question = group.question;
 	postDisc.parent = targetGroupID;
-	//console.log ("Discussion "+index+" :"+JSON.stringify(postDisc));
+	console.log ("Discussion "+index+" :"+JSON.stringify(postDisc));
 	osapi.jive.corev3.discussions.create(postDisc).execute(onContentCreated);
 	});
-    //console.log ("Discussions: "+JSON.stringify(discussions));
+    console.log ("Discussions: "+JSON.stringify(discussions));
 }
 
 
@@ -131,10 +131,10 @@ function onProjDiscFetch(response) {
 	postDisc.content = group.content;
 	postDisc.question = group.question;
 	postDisc.parent = targetProjID;
-	//console.log ("Discussion "+index+" :"+JSON.stringify(postDisc));
+	console.log ("Discussion "+index+" :"+JSON.stringify(postDisc));
 	osapi.jive.corev3.discussions.create(postDisc).execute(onContentCreated);
 	});
-    //console.log ("Discussions: "+JSON.stringify(discussions));
+    console.log ("Discussions: "+JSON.stringify(discussions));
 }
 
 //Fetching Documents
