--- a/dealroom.html
+++ b/dealroom.html
@@ -521,8 +521,8 @@ function onGroupCreated(response) {
 	var gMessage = document.getElementById("response-message");
 	gMessage.innerHTML = "Group successfully created. <br /> Click <a href=\""+response.resources.html.ref+"\">here</a> to visit the group";
 	// Add GROUP Content-Copying here!
-	loadDiscussions(templateSpace);
-    loadDocuments(templateSpace);
+	//loadDiscussions(templateSpace);
+    //loadDocuments(templateSpace);
     //loadFiles(templateSpace);	
 	//loadPolls(templateSpace);
 	//loadBlogs();
