--- a/dealroom.html
+++ b/dealroom.html
@@ -494,10 +494,10 @@ function onProjectCreated(response) {
 	//mini.createDismissibleMessage("Project created with the ID: " + response.id);
 	var gMessage = document.getElementById("response-message");
 	gMessage.innerHTML = gMessage.innerHTML + "<br />Click <a href=\""+response.resources.html.ref+"\">here</a> to visit the Project";
-	//loadTasks(templateProject);
-	//loadCheckPoints(templateProject);
-	//loadProjDiscussions(templateProject);
-    //loadProjDocuments(templateProject);
+	loadTasks(templateProject);
+	loadCheckPoints(templateProject);
+	loadProjDiscussions(templateProject);
+    loadProjDocuments(templateProject);
 	}
 }
 
@@ -521,11 +521,11 @@ function onGroupCreated(response) {
 	var gMessage = document.getElementById("response-message");
 	gMessage.innerHTML = "Group successfully created. <br /> Click <a href=\""+response.resources.html.ref+"\">here</a> to visit the group";
 	// Add GROUP Content-Copying here!
-	//loadDiscussions(templateSpace);
-    //loadDocuments(templateSpace);
-    //loadFiles(templateSpace);	
-	//loadPolls(templateSpace);
-	//loadBlogs();
+	loadDiscussions(templateSpace);
+    loadDocuments(templateSpace);
+    loadFiles(templateSpace);	
+	loadPolls(templateSpace);
+	loadBlogs();
 	//loadAttachments(templateSpaceURI);
 	//Project creation within the newly created group
 	
